tests/lean/abbrev_paren.hlean.expected.out
abbrev_paren.hlean:5:54: error: don't know how to synthesize placeholder
C : Precategory
⊢ C = Precategory.mk (carrier C) C
abbrev_paren.hlean:5:54: error: failed to add declaration '14.0' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (C : Precategory),
    ?M_1
